# Permy

./: .gitignore  Dockerfile  LEGAL.md  Makefile  README.md  env.example  pyproject.toml  render.yaml
.github/workflows/: ci.yml
deploy/: deploy.sh  docker-compose.yml
docs/: ARCHITECTURE.md  COVERAGE.md  DELIVERABLES.md  DEPLOY.md  DOCS_OUTLINE.md  LEAD_SCORING.md  OPS.md  QUICKSTART.md  RAPIDAPI_LISTING.md  RISK_REGISTER.md  ROADMAP.md  SPRINT_PLAN.md  dashboard.html  landing.html  openapi.json  playground.html
docs/assets/: README.md
permy/adapters/: arcgis_base.py  austin.py  base.py  chicago.py  fortworth.py  la.py  miami.py  nyc.py  orlando.py  seattle.py  sf.py
permy/api/: main.py
permy/api/v1/: alerts.py  contractors.py  leads.py  meta.py  permits.py  sample.py
permy/core/: confidence.py  config.py  logging.py
permy/db/: pg_repo.py  repo.py  schema.sql
permy/ingest/: alert_matcher.py  classify.py  cli.py  dedupe.py  geocode.py  license.py  pipeline.py  webhooks.py  worker.py
permy/mcp/: server.py
permy/middleware/: auth.py  ratelimit.py
permy/models/: schemas.py
permy/scoring/: lead_score.py
permy/scripts/: seed.py
sdks/: README.md
sdks/node/: index.ts  package.json
sdks/python/: pyproject.toml
sdks/python/permy_sdk/: __init__.py
tests/: test_api.py  test_austin_adapter.py  test_ingest.py  test_mcp.py  test_mcp_server.py  test_new_adapters.py  test_nyc_chicago_adapters.py  test_ops_and_webhooks.py  test_orlando_fortworth.py  test_pg_repo.py  test_sample_and_production.py  test_scoring.py
tests/fixtures/austin/: sample_3.json
tests/fixtures/chicago/: sample_3.json
tests/fixtures/fortworth/: sample_3.json
tests/fixtures/la/: sample_3.json  server.json
tests/fixtures/miami/: sample_3.json
tests/fixtures/nashville/: sample_3.json
tests/fixtures/nyc/: sample_1.json  sample_3.json
tests/fixtures/orlando/: sample_3.json
tests/fixtures/seattle/: sample_3.json
tests/fixtures/sf/: sample_3.json
web/: README.md  dashboard.html  docs.html  index.html  legal.html  playground.html  reference.html  robots.txt  site.webmanifest  sitemap.xml  vercel.json
