[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permy"
version = "0.1.0"
description = "Permy — the friendly permit & construction-intelligence API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Permy" }]
keywords = ["permits", "construction", "municipal", "api", "leads", "proptech"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "redis>=5.0",
    "arq>=0.25",
    "asyncpg>=0.29",
    "SQLAlchemy>=2.0",
    "geoalchemy2>=0.14",
    "orjson>=3.9",
    "python-multipart>=0.0.6",
    "PyYAML>=6.0",
    "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.8",
]
mcp = ["mcp>=0.5"]

[project.scripts]
permy-api = "permy.api.main:run"
permy-worker = "permy.ingest.worker:run"
permy-ingest = "permy.ingest.cli:run"
permy-seed = "permy.scripts.seed:run"
permy-mcp = "permy.mcp.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["permy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
markers = ["live: hits real upstream open-data APIs (skipped by default)"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
