[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permy-sdk"
version = "0.1.0"
description = "Python SDK for the Permy Building Permit & Construction Intelligence API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://rapidapi.com/permy"

[tool.setuptools.packages.find]
include = ["permy_sdk*"]
